# CMakeProjectTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
package/stack/: linked_stack.cpp  linked_stack.h
src/: main.cpp
tests/: CMakeLists.txt
tests/package/stack/: test_linked_stack.cpp
